# coding-agent

./: README.md  pyproject.toml  tutorial.md
coding-rules/: ai_tools.md  cursor_rules.md
src/: find_arxiv_papers.py  lite_llm.py  tools.py
src/others/agent1/: agentic_file.py
src/others/agent2/: README.md  agent_loop.py
src/util/: tiny_agent.py
